crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_integer_direct.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unIData (iData 7)
--- unoptimized UPLC
(program 1.1.0 [(builtin unIData) [(builtin iData) (con integer 7)]])
--- optimized Core
let anf#1 : Data = iData 7 in
unIData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin unIData) anf_2]) [(builtin iData) (con integer 7)]])
--- isolated pass
--- core before
unIData (iData 7)
--- uplc before
(program 1.1.0 [(builtin unIData) [(builtin iData) (con integer 7)]])
--- core after
7
--- uplc after
(program 1.1.0 (con integer 7))
--- result
(con integer 7)
--- logs
[]
