crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_integer_reverse_bound_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let encoded#2 : Data = 0 in
let x#1 : int = unIData encoded#2 in
trace "must not run" in iData x#1
--- unoptimized UPLC
(program 1.1.0
  [(lam encoded_2
    [(lam x_1
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin iData) x_1])]))
      [(builtin unIData) encoded_2]])
    (con integer 0)])
--- optimized Core
let x#4 : int = unIData 0 in
trace "must not run" in iData x#4
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam x_1
      (force [[builtin_2 (con string "must not run")] (delay [(builtin iData) x_1])]))
      [(builtin unIData) (con integer 0)]])
    (force (builtin trace))])
--- isolated pass
--- core before
let encoded#2 : Data = 0 in
let x#1 : int = unIData encoded#2 in
trace "must not run" in iData x#1
--- uplc before
(program 1.1.0
  [(lam encoded_2
    [(lam x_1
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin iData) x_1])]))
      [(builtin unIData) encoded_2]])
    (con integer 0)])
--- core after
let encoded#2 : Data = 0 in
let x#1 : int = unIData encoded#2 in
trace "must not run" in iData x#1
--- uplc after
(program 1.1.0
  [(lam encoded_2
    [(lam x_1
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin iData) x_1])]))
      [(builtin unIData) encoded_2]])
    (con integer 0)])
--- result
error: Runtime(NotData(Integer(0)))
--- logs
[]
